# deploy-agent

./: .env.example  .gitignore  DOCKER_README.md  Dockerfile  Dockerfile.mcp  Dockerfile.test-server  PHASE2_PLAN.md  README.md  deployai_architecture_walkthrough.ipynb  docker-compose.yml  multi_agent_architecture_walkthrough.ipynb  multi_agent_plan.md  pyproject.toml  test-server-config.yaml  test_db.py  test_e2e.py
config/: agent-config.yaml  mosquitto.conf
docs/: DOKPLOY_K8S_INTEGRATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  PHASE1.md
scripts/: init-db.sh  migrate_001_sessions.sql  test-server-start.sh
src/: __init__.py
src/agent_comm/: __init__.py  models.py  mqtt_publisher.py  router.py  service.py
src/api/: __init__.py  main.py
src/bus/: events.py  publisher.py
src/cli/: app.py  stream.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  config.py  db.py  exceptions.py
src/db/models/: __init__.py
src/fleet/: repository.py
src/graph/: __init__.py  graph.py  runner.py  state.py
src/graph/edges/: __init__.py
src/graph/nodes/: agent.py  executor.py  planner.py  reviewer.py
src/infrastructure/: __init__.py  application_repo.py  llm_factory.py  project_repo.py  repository.py  ssh_client.py
src/install/: router.py
src/mcp_server/: __init__.py  server.py
src/memory/: __init__.py
src/permission/: ruleset.py  service.py
src/server/routes/: permissions.py  sessions.py
src/session/: engine.py  store.py
src/task/: models.py  mqtt.py  router.py  service.py
src/tools/: __init__.py  agent_task.py  database.py  k8s_deploy.py  ssh.py
tests/: test_basic.py
